[package]
name = "stmc"
version = "0.2.3"
edition = "2021"
readme = "README.md"
repository = "https://github.com/Defmc/stmc"
categories = ["encoding", "text-processing"]
keywords = ["tcp", "network", "udp"]
license = "MIT"
description = "Simple TCP/UDP Message Communication wrapper"

[lib]
name = "stmc"

[dependencies]
bincode = "1.3.3"
serde = { version = "1.0.148", features = ["derive"] }

[badges]
maintenance = { status = "passively-maintained" }

[features]
big_endian = []
